--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,3 +56,37 @@ jobs:
         with:
           name: checkstyle-report
           path: target/checkstyle-result.xml
+  
+  # Stage 3: SAST - CodeQL Security Scanning
+  codeql-analysis:
+    name: Security - CodeQL SAST
+    runs-on: ubuntu-latest
+    needs: checkout-setup
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v4
+        
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: java
+          queries: security-and-quality
+          
+      - name: Set up JDK ${{ env.JAVA_VERSION }}
+        uses: actions/setup-java@v4
+        with:
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: 'temurin'
+          cache: maven
+          
+      - name: Build application for CodeQL
+        run: mvn clean compile -DskipTests
+        
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:java"
